TPFinal/src/LogoPar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from .\LogoPar.y
-----------------------------------------------------------------------------

state 117 contains 14 shift/reduce conflicts.

terminal sum is unused
terminal difference is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_logo -> CommSeq                             (0)
	CommSeq -> Comm                                    (1)
	CommSeq -> Comm CommSeq                            (2)
	Comm -> fordward Exp                               (3)
	Comm -> fd Exp                                     (4)
	Comm -> back Exp                                   (5)
	Comm -> bk Exp                                     (6)
	Comm -> right Exp                                  (7)
	Comm -> rt Exp                                     (8)
	Comm -> left Exp                                   (9)
	Comm -> lt Exp                                     (10)
	Comm -> clearscreen                                (11)
	Comm -> cs                                         (12)
	Comm -> clean                                      (13)
	Comm -> penup                                      (14)
	Comm -> pu                                         (15)
	Comm -> pendown                                    (16)
	Comm -> pd                                         (17)
	Comm -> hideturtle                                 (18)
	Comm -> ht                                         (19)
	Comm -> showturtle                                 (20)
	Comm -> st                                         (21)
	Comm -> home                                       (22)
	Comm -> setx Exp                                   (23)
	Comm -> sety Exp                                   (24)
	Comm -> setxy Exp Exp                              (25)
	Comm -> setheading Exp                             (26)
	Comm -> seth Exp                                   (27)
	Comm -> repeat Exp '[' Comm ']'                    (28)
	Comm -> print Exp                                  (29)
	Comm -> to var Args Comm end                       (30)
	Comm -> setcolor Exp                               (31)
	Comm -> make '"' var Exp                           (32)
	Comm -> for '[' var Exp Exp ']' '[' Comm ']'       (33)
	Comm -> for '[' var Exp Exp Exp ']' '[' Comm ']'   (34)
	Comm -> if Bool '[' Comm ']'                       (35)
	Comm -> fill                                       (36)
	Comm -> filled Exp '[' Comm ']'                    (37)
	Comm -> wait Exp                                   (38)
	Comm -> 'do.while' '[' Comm ']' Bool               (39)
	Exp -> num                                         (40)
	Exp -> xcor                                        (41)
	Exp -> ycor                                        (42)
	Exp -> heading                                     (43)
	Exp -> towards List                                (44)
	Exp -> ':' var                                     (45)
	Exp -> first List                                  (46)
	Exp -> last List                                   (47)
	Exp -> item Exp List                               (48)
	Exp -> pick List                                   (49)
	Exp -> butfirst List                               (50)
	Exp -> butlast List                                (51)
	Exp -> readword                                    (52)
	Exp -> '(' Exp ')'                                 (53)
	List -> pos                                        (54)
	List -> list SecExp                                (55)
	List -> '(' List ')'                               (56)
	SecExp -> Exp                                      (57)
	SecExp -> Exp SecExp                               (58)
	Args -> ':' var                                    (59)
	Args -> ':' var Args                               (60)
	Bool -> Exp '>' Exp                                (61)
	Bool -> Exp '<' Exp                                (62)
	Bool -> Exp '=' Exp                                (63)
	Bool -> Exp '>=' Exp                               (64)
	Bool -> Exp '<=' Exp                               (65)
	Bool -> Exp '!=' Exp                               (66)
	Bool -> Bool '&&' Bool                             (67)
	Bool -> Bool '||' Bool                             (68)
	Bool -> not Bool                                   (69)
	Bool -> '(' Bool ')'                               (70)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	fordward       { TokenFod }
	fd             { TokenFd }
	back           { TokenBak }
	bk             { TokenBk }
	right          { TokenRit }
	rt             { TokenRt }
	left           { TokenLet }
	lt             { TokenLt }
	clearscreen    { TokenCls }
	cs             { TokenCs }
	clean          { TokenCln }
	penup          { TokenPup }
	pu             { TokenPu }
	pendown        { TokenPdn }
	pd             { TokenPd }
	hideturtle     { TokenHte }
	ht             { TokenHt }
	showturtle     { TokenSte }
	st             { TokenSt }
	home           { TokenHome }
	setx           { TokenStx }
	sety           { TokenSty }
	setxy          { TokenStxy }
	setheading     { TokenSethead }
	seth           { TokenSeth }
	repeat         { TokenRep }
	print          { TokenPrnt }
	to             { TokenTo }
	end            { TokenEnd }
	setcolor       { TokenSetCol }
	make           { TokenMk }
	for            { TokenFor }
	if             { TokenIf }
	fill           { TokenFill }
	filled         { TokenFilled }
	wait           { TokenWait }
	'do.while'     { TokenWhile }
	pos            { TokenPos }
	list           { TokenList }
	xcor           { TokenXCor }
	ycor           { TokenYCor }
	heading        { TokenHead }
	towards        { TokenTow }
	':'            { TokenRef }
	sum            { TokenSum }
	difference     { TokenDiff }
	first          { TokenFst }
	last           { TokenLst }
	item           { TokenItem }
	pick           { TokenPick }
	butfirst       { TokenTail }
	butlast        { TokenRTail }
	readword       { TokenRead }
	var            { TokenVar $$ }
	num            { TokenNum $$ }
	'"'            { TokenStr }
	'('            { TokenPA }
	')'            { TokenPC }
	'['            { TokenCA }
	']'            { TokenCC }
	'>'            { TokenMayor }
	'<'            { TokenMenor }
	'='            { TokenIgual }
	'<='           { TokenMaIgual }
	'>='           { TokenMeIgual }
	'!='           { TokenNoIgual }
	'&&'           { TokenY }
	'||'           { TokenO }
	not            { TokenNo }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_logo     rule  0
	CommSeq         rules 1, 2
	Comm            rules 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	Exp             rules 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53
	List            rules 54, 55, 56
	SecExp          rules 57, 58
	Args            rules 59, 60
	Bool            rules 61, 62, 63, 64, 65, 66, 67, 68, 69, 70

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_logo -> . CommSeq                            (rule 0)

	fordward       shift, and enter state 3
	fd             shift, and enter state 4
	back           shift, and enter state 5
	bk             shift, and enter state 6
	right          shift, and enter state 7
	rt             shift, and enter state 8
	left           shift, and enter state 9
	lt             shift, and enter state 10
	clearscreen    shift, and enter state 11
	cs             shift, and enter state 12
	clean          shift, and enter state 13
	penup          shift, and enter state 14
	pu             shift, and enter state 15
	pendown        shift, and enter state 16
	pd             shift, and enter state 17
	hideturtle     shift, and enter state 18
	ht             shift, and enter state 19
	showturtle     shift, and enter state 20
	st             shift, and enter state 21
	home           shift, and enter state 22
	setx           shift, and enter state 23
	sety           shift, and enter state 24
	setxy          shift, and enter state 25
	setheading     shift, and enter state 26
	seth           shift, and enter state 27
	repeat         shift, and enter state 28
	print          shift, and enter state 29
	to             shift, and enter state 30
	setcolor       shift, and enter state 31
	make           shift, and enter state 32
	for            shift, and enter state 33
	if             shift, and enter state 34
	fill           shift, and enter state 35
	filled         shift, and enter state 36
	wait           shift, and enter state 37
	'do.while'     shift, and enter state 38

	CommSeq        goto state 39
	Comm           goto state 40

State 1

	CommSeq -> . Comm                                   (rule 1)

	fordward       shift, and enter state 3
	fd             shift, and enter state 4
	back           shift, and enter state 5
	bk             shift, and enter state 6
	right          shift, and enter state 7
	rt             shift, and enter state 8
	left           shift, and enter state 9
	lt             shift, and enter state 10
	clearscreen    shift, and enter state 11
	cs             shift, and enter state 12
	clean          shift, and enter state 13
	penup          shift, and enter state 14
	pu             shift, and enter state 15
	pendown        shift, and enter state 16
	pd             shift, and enter state 17
	hideturtle     shift, and enter state 18
	ht             shift, and enter state 19
	showturtle     shift, and enter state 20
	st             shift, and enter state 21
	home           shift, and enter state 22
	setx           shift, and enter state 23
	sety           shift, and enter state 24
	setxy          shift, and enter state 25
	setheading     shift, and enter state 26
	seth           shift, and enter state 27
	repeat         shift, and enter state 28
	print          shift, and enter state 29
	to             shift, and enter state 30
	setcolor       shift, and enter state 31
	make           shift, and enter state 32
	for            shift, and enter state 33
	if             shift, and enter state 34
	fill           shift, and enter state 35
	filled         shift, and enter state 36
	wait           shift, and enter state 37
	'do.while'     shift, and enter state 38

	Comm           goto state 2

State 2

	CommSeq -> Comm .                                   (rule 1)



State 3

	Comm -> fordward . Exp                              (rule 3)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 81

State 4

	Comm -> fd . Exp                                    (rule 4)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 80

State 5

	Comm -> back . Exp                                  (rule 5)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 79

State 6

	Comm -> bk . Exp                                    (rule 6)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 78

State 7

	Comm -> right . Exp                                 (rule 7)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 77

State 8

	Comm -> rt . Exp                                    (rule 8)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 76

State 9

	Comm -> left . Exp                                  (rule 9)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 75

State 10

	Comm -> lt . Exp                                    (rule 10)

	xcor           shift, and enter state 44
	ycor           shift, and enter state 45
	heading        shift, and enter state 46
	towards        shift, and enter state 47
	':'            shift, and enter state 48
	first          shift, and enter state 49
	last           shift, and enter state 50
	item           shift, and enter state 51
	pick           shift, and enter state 52
	butfirst       shift, and enter state 53
	butlast        shift, and enter state 54
	readword       shift, and enter state 55
	num            shift, and enter state 56
	'('            shift, and enter state 57

	Exp            goto state 74

State 11

	Comm -> clearscreen .                               (rule 11)

	fordward       reduce using rule 11
	fd             reduce using rule 11
	back           reduce using rule 11
	bk             reduce using rule 11
	right          reduce using rule 11
	rt             reduce using rule 11
	left           reduce using rule 11
	lt             reduce using rule 11
	clearscreen    reduce using rule 11
	cs             reduce using rule 11
	clean          reduce using rule 11
	penup          reduce using rule 11
	pu             reduce using rule 11
	pendown        reduce using rule 11
	pd             reduce using rule 11
	hideturtle     reduce using rule 11
	ht             reduce using rule 11
	showturtle     reduce using rule 11
	st             reduce using rule 11
	home           reduce using rule 11
	setx           reduce using rule 11
	sety           reduce using rule 11
	setxy          reduce using rule 11
	setheading     reduce using rule 11
	seth           reduce using rule 11
	repeat         reduce using rule 11
	print          reduce using rule 11
	to             reduce using rule 11
	end            reduce using rule 11
	setcolor       reduce using rule 11
	make           reduce using rule 11
	for            reduce using rule 11
	if             reduce using rule 11
	fill           reduce using rule 11
	filled         reduce using rule 11
	wait           reduce using rule 11
	'do.while'     reduce using rule 11
	']'            reduce using rule 11
	%eof           reduce using rule 11


State 12

	Comm -> cs .                                        (rule 12)

	fordward       reduce using rule 12
	fd             reduce using rule 12
	back           reduce using rule 12
	bk             reduce using rule 12
	right          reduce using rule 12
	rt             reduce using rule 12
	left           reduce using rule 12
	lt             reduce using rule 12
	clearscreen    reduce using rule 12
	cs             reduce using rule 12
	clean          reduce using rule 12
	penup          reduce using rule 12
	pu             reduce using rule 12
	pendown        reduce using rule 12
	pd             reduce using rule 12
	hideturtle     reduce using rule 12
	ht             reduce using rule 12
	showturtle     reduce using rule 12
	st             reduce using rule 12
	home           reduce using rule 12
	setx           reduce using rule 12
	sety           reduce using rule 12
	setxy          reduce using rule 12
	setheading     reduce using rule 12
	seth           reduce using rule 12
	repeat         reduce using rule 12
	print          reduce using rule 12
	to             reduce using rule 12
	end            reduce using rule 12
	setcolor       reduce using rule 12
	make           reduce using rule 12
	for            reduce using rule 12
	if             reduce using rule 12
	fill           reduce using rule 12
	filled         reduce using rule 12
	wait           reduce using rule 12
	'do.while'     reduce using rule 12
	']'            reduce using rule 12
	%eof           reduce using rule 12


State 13

	Comm -> clean .                                     (rule 13)

	fordward       reduce using rule 13
	fd             reduce using rule 13
	back           reduce using rule 13
	bk             reduce using rule 13
	right          reduce using rule 13
	rt             reduce using rule 13
	left           reduce using rule 13
	lt             reduce using rule 13
	clearscreen    reduce using rule 13
	cs             reduce using rule 13
	clean          reduce using rule 13
	penup          reduce using rule 13
	pu             reduce using rule 13
	pendown        reduce using rule 13
	pd             reduce using rule 13
	hideturtle     reduce using rule 13
	ht             reduce using rule 13
	showturtle     reduce using rule 13
	st             reduce using rule 13
	home           reduce using rule 13
	setx           reduce using rule 13
	sety           reduce using rule 13
	setxy          reduce using rule 13
	setheading     reduce using rule 13
	seth           reduce using rule 13
	repeat         reduce using rule 13
	print          reduce using rule 13
	to             reduce using rule 13
	end            reduce using rule 13
	setcolor       reduce using rule 13
	make           reduce using rule 13
	for            reduce using rule 13
	if             reduce using rule 13
	fill           reduce using rule 13
	filled         reduce using rule 13
	wait           reduce using rule 13
	'do.while'     reduce using rule 13
	']'            reduce using rule 13
	%eof           reduce using rule 13


State 14

	Comm -> penup .                                     (rule 14)

	fordward       reduce using rule 14
	fd             reduce using rule 14
	back           reduce using rule 14
	bk             reduce using rule 14
	right          reduce using rule 14
	rt             reduce using rule 14
	left           reduce using rule 14
	lt             reduce using rule 14
	clearscreen    reduce using rule 14
	cs             reduce using rule 14
	clean          reduce using rule 14
	penup          reduce using rule 14
	pu             reduce using rule 14
	pendown        reduce using rule 14
	pd             reduce using rule 14
	hideturtle     reduce using rule 14
	ht             reduce using rule 14
	showturtle     reduce using rule 14
	st             reduce using rule 14
	home           reduce using rule 14
	setx           reduce using rule 14
	sety           reduce using rule 14
	setxy          reduce using rule 14
	setheading     reduce using rule 14
	seth           reduce using rule 14
	repeat         reduce using rule 14
	print          reduce using rule 14
	to             reduce using rule 14
	end            reduce using rule 14
	setcolor       reduce using rule 14
	make           reduce using rule 14
	for            reduce using rule 14
	if             reduce using rule 14
	fill           reduce using rule 14
	filled         reduce using rule 14
	wait           reduce using rule 14
	'do.while'     reduce using rule 14
	']'            reduce using rule 14
	%eof           reduce using rule 14


State 15

	Comm -> pu .                                        (rule 15)

	fordward       reduce using rule 15
	fd             reduce using rule 15
	back           reduce using rule 15
	bk             reduce using rule 15
	right          reduce using rule 15
	rt             reduce using rule 15
	left           reduce using rule 15
	lt             reduce using rule 15
	clearscreen    reduce using rule 15
	cs             reduce using rule 15
	clean          reduce using rule 15
	penup          reduce using rule 15
	pu             reduce using rule 15
	pendown        reduce using rule 15
	pd             reduce using rule 15
	hideturtle     reduce using rule 15
	ht             reduce using rule 15
	showturtle     reduce using rule 15
	st             reduce using rule 15
	home           reduce using rule 15
	setx           reduce using rule 15
	sety           reduce using rule 15
	setxy          reduce using rule 15
	setheading     reduce using rule 15
	seth           reduce using rule 15
	repeat         reduce using rule 15
	print          reduce using rule 15
	to             reduce using rule 15
	end            reduce using rule 15
	setcolor       reduce using rule 15
	make           reduce using rule 15
	for            reduce using rule 15
	if             reduce using rule 15
	fill           reduce using rule 15
	filled         reduce using rule 15
	wait           reduce using rule 15
	'do.while'     reduce using rule 15
	']'            reduce using rule 15
	%eof           reduce using rule 15


State 16

	Comm -> pendown .                                   (rule 16)

	fordward       reduce using rule 16
	fd             reduce using rule 16
	back           reduce using rule 16
	bk             reduce using rule 16
	right          reduce using rule 16
	rt             reduce using rule 16
	left           reduce using rule 16
	lt             reduce using rule 16
	clearscreen    reduce using rule 16
	cs             reduce using rule 16
	clean          reduce using rule 16
	penup          reduce using rule 16
	pu             reduce using rule 16
	pendown        reduce using rule 16
	pd             reduce using rule 16
	hideturtle     reduce using rule 16
	ht             reduce using rule 16
	showturtle     reduce using rule 16
	st             reduce using rule 16
	home           reduce using rule 16
	setx           reduce using rule 16
	sety           reduce using rule 16
	setxy          reduce using rule 16
	setheading     reduce using rule 16
	seth           reduce using rule 16
	repeat         reduce using rule 16
	print          reduce using rule 16
	to             reduce using rule 16
	end            reduce using rule 16
	setcolor       reduce using rule 16
	make           reduce using rule 16
	for            reduce using rule 16
	if             reduce using rule 16
	fill           reduce using rule 16
	filled         reduce using rule 16
	wait           reduce using rule 16
	'do.while'     reduce using rule 16
	']'            reduce using rule 16
	%eof           reduce using rule 16


State 17

	Comm -> pd .                                        (rule 17)

	fordward       reduce using rule 17
	fd             reduce using rule 17
	back           reduce using rule 17
	bk             reduce using rule 17
	right          reduce using rule 17
	rt             reduce using rule 17
	left           reduce using rule 17
	lt             reduce using rule 17
	clearscreen    reduce using rule 17
	cs             reduce using rule 17
	clean          reduce using rule 17
	penup          reduce using rule 17
	pu             reduce using rule 17
	pendown        reduce using rule 17
	pd             reduce using rule 17
	hideturtle     reduce using rule 17
	ht             reduce using rule 17
	showturtle     reduce using rule 17
	st             reduce using rule 17
	home           reduce using rule 17
	setx           reduce using rule 17
	sety           reduce using rule 17
	setxy          reduce using rule 17
	setheading     reduce using rule 17
	seth           reduce using rule 17
	repeat         reduce using rule 17
	print          reduce using rule 17
	to             reduce using rule 17
	end            reduce using rule 17
	setcolor       reduce using rule 17
	make           reduce using rule 17
	for            reduce using rule 17
	if             reduce using rule 17
	fill           reduce using rule 17
	filled         reduce using rule 17
	wait           reduce using rule 17
	'do.while'     reduce using rule 17
	']'            reduce using rule 17
	%eof           reduce using rule 17


State 18

	Comm -> hideturtle .                                (rule 18)
